# hs-di

./: .gitignore  .travis.yml  Common.hs  LICENSE  Main.hs  Main10.dump-splices  Main10.hs  Main10App.hs  Main10IOOutsideBrainstorm.hs  Main10RealCode.hs  Main10SyntaxBrainstorm.hs  Main10TH.hs  Main10TestImport.hs  Main11.hs  Main2.hs  Main3.hs  Main4.hs  Main5.hs  Main7.hs  Main8.hs  Main9.hs  README.md  hs-di.cabal  release.sh  stack.yaml
examples/simple/: Lib.hs  Spec.hs  hs-di-examples-simple.cabal  stack.yaml
src/: DI.hs  DependencyInjector.hs
test/: Assert.hs  DefsToTestIdiomaticModuleSupport.hs  DefsToTestModuleSupport.hs  GhcidTest.hs  GhcidTest2.hs  Gradual.hs  GradualSpec.hs  IOScenario.hs  IOScenarioMain.hs  MainSpec.hs  Multiline.hs  NotSoEasyToTestCode.hs  SimpleDefs.hs  SpecCommon.hs  TestCommon.hs
