name:                hs-di
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/Wizek/hs-di#readme
license:             BSD3
license-file:        LICENSE
author:              Milan Nagy
maintainer:          123.wizek@gmail.com
copyright:           2016 Milan Nagy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, .
  exposed-modules:
    DependencyInjector
    DI
  build-depends:
    base >= 4.7 && < 5
    , template-haskell
    , compose-ltr
  default-language:    Haskell2010

-- executable hs-di
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , hs-di
--   default-language:    Haskell2010

test-suite hs-di-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, .
  other-modules:
    DefsToTestModuleSupport
    MainSpec
    NotSoEasyToTestCode
    SimpleDefs
  main-is:             Spec.hs
  build-depends:       
    base
    , hs-di
    , hspec
    , QuickCheck
    , template-haskell
    , time
    , MissingH
    , compose-ltr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  default-language:    Haskell2010
  default-extensions:
    TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/Wizek/hs-di
