name:                hs-di
version:             0.2.0
synopsis:            Dependency Injection library for Haskell to allow powerful unit testing and mocking (compile-time type-checked)
description:         Please see README.md
homepage:            https://github.com/Wizek/hs-di#readme
license:             BSD3
license-file:        LICENSE
author:              Milan Nagy
maintainer:          123.wizek@gmail.com
copyright:           2016 Milan Nagy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, .
  other-modules:
    Common
  exposed-modules:
    DependencyInjector
    DI
  build-depends:
    base >= 4.7 && < 5
    , template-haskell
    , compose-ltr
  default-language:    Haskell2010

test-suite hs-di-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, .
  other-modules:
    Common
    Gradual
    MainSpec
    SimpleDefs
    GradualSpec
    NotSoEasyToTestCode
    DefsToTestModuleSupport
    DefsToTestIdiomaticModuleSupport
  main-is:             Spec.hs
  build-depends:
    base
    , hs-di
    , hspec
    , QuickCheck
    , template-haskell
    , time
    , MissingH
    , compose-ltr
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O0
    -fdefer-type-errors
    -ddump-splices
    -ddump-to-file
    -- -fforce-recomp
  default-language:    Haskell2010
  default-extensions:
    TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/Wizek/hs-di
